[workspace]
members = [
    "nexus-common",
    "nexus-storage",
    "nexus-proxy",
    "nexus-events",
    "nexus-server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
bytes = "1.5"
